<resources>
    <string name="app_name">Tubes - Covid</string>
    <string name="openDrawer">1</string>
    <string name="closeDrawer">2</string>

    <string name="text_perawatan1">Jika Anda merasa sakit, Anda harus beristirahat, minum banyak air, dan makan makanan bergizi. Gunakan ruangan yang terpisah dari anggota keluarga Anda, dan jika memungkinkan gunakan kamar mandi khusus. Bersihkan dan lakukan disinfeksi pada permukaan benda yang sering disentuh.</string>
    <string name="text_perawatan2">Semua orang harus menjaga pola hidup sehat di rumah. Jaga pola diet yang sehat, tidur cukup, tetap aktif, dan lakukan kontak sosial dengan orang-orang yang Anda sayangi melalui telepon atau internet. Selama masa sulit seperti sekarang, anak-anak membutuhkan kasih sayang dan perhatian lebih dari orang dewasa. Usahakan untuk selalu menjaga rutinitas dan jadwal seperti biasanya."</string>
    <string name="text_perawatan3">Merasa sedih, stres, atau bingung selama krisis merupakan hal yang normal. Berbicara dengan orang yang Anda percaya, seperti teman dan keluarga, dapat membantu. Jika Anda merasa kewalahan, hubungi tenaga kesehatan atau konselor. virus ini akan mengalami gejala ringan hingga sedang, dan akan pulih tanpa perlu dirawat di rumah sakit."</string>

    <string name="text_pencegahan1">Lindungi diri Anda dan orang lain di sekitar Anda dengan mengetahui fakta-fakta terkait virus ini dan mengambil langkah pencegahan yang sesuai. Ikuti saran yang diberikan oleh otoritas kesehatan setempat.</string>
    <string name="text_pencegahan2">Masker dapat membantu mencegah penyebaran virus dari orang yang mengenakannya kepada orang lain. Mengenakan masker saja tidak cukup untuk melindungi diri dari COVID-19, sehingga harus dikombinasikan dengan pembatasan fisik dan kebersihan tangan. Ikuti saran yang diberikan oleh otoritas kesehatan setempat.</string>
    <string name="text_pencegahan3">Untuk mencegah penyebaran COVID-19 : </string>

    <string name="text_gejala1">Masing-masing orang memiliki respons yang berbeda terhadap COVID-19. Sebagian besar orang yang terpapar virus ini akan mengalami gejala ringan hingga sedang, dan akan pulih tanpa perlu dirawat di rumah sakit.</string>
    <string name="gejalaUmum">Gejala yang paling umum : </string>
    <string name="gejalaSerius">Gejala yang serius:</string>
    <string name="text_gejala3">Segera cari bantuan medis jika Anda mengalami gejala serius. Selalu hubungi dokter atau fasilitas kesehatan yang ingin Anda tuju sebelum mengunjunginya. Orang dengan gejala ringan yang dinyatakan sehat harus melakukan perawatan mandiri di rumah. Rata-rata gejala akan muncul 5–6 hari setelah seseorang pertama kali terinfeksi virus ini, tetapi bisa juga 14 hari setelah terinfeksi.</string>

    <string name="subJudulBerita">BERITA RESMI</string>
    <string name="berita1">Menu Makanan Pasien RS Darurat Wisma Atlet Jadi Perhatian Ketua Gugasnas</string>
    <string name="berita2">Covid-19 Mewabah, Doni Monardo Ingatkan Pentingnya Disiplin Kolektif</string>
    <string name="berita3">Lima Arahan Presiden terkait Penerapan Adaptasi Kebiasaan Baru</string>
    <string name="berita4">Dokter Reisa: Penggunaan Rapid Test Tidak Digunakan Untuk Kepentingan Diagnostik</string>
    <string name="berita5">Presiden Ingatkan Daerah untuk Terus Kendalikan Penyebaran Covid-19</string>

</resources>