<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="News"
        android:textSize="40dp"
        android:id="@+id/judul"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:textColor="#000000">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subJudulBerita"
        android:layout_below="@id/judul"
        android:textSize="25dp"
        android:paddingTop="20dp"
        android:id="@+id/subJudulBerita"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="230dp"
        android:layout_height="110dp"
        android:layout_below="@id/subJudulBerita"
        android:text="@string/berita1"
        android:paddingTop="12dp"
        android:textSize="20dp"
        android:clickable="true"
        android:id="@+id/berita1"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:src="@drawable/menu"
        android:clickable="true"
        android:id="@+id/gambar1"
        android:layout_below="@id/subJudulBerita"
        android:layout_toRightOf="@id/berita1"/>

    <TextView
        android:layout_width="230dp"
        android:layout_height="110dp"
        android:layout_below="@id/berita1"
        android:text="@string/berita2"
        android:paddingTop="12dp"
        android:clickable="true"
        android:textSize="20dp"
        android:id="@+id/berita2"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:src="@drawable/wabah"
        android:layout_below="@id/berita1"
        android:id="@+id/gambar2"
        android:clickable="true"
        android:layout_toRightOf="@id/berita2" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="110dp"
        android:layout_below="@id/berita2"
        android:text="@string/berita3"
        android:paddingTop="12dp"
        android:clickable="true"
        android:textSize="20dp"
        android:id="@+id/berita3"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:src="@drawable/arahan"
        android:layout_below="@id/berita2"
        android:id="@+id/gambar3"
        android:clickable="true"
        android:layout_toRightOf="@id/berita3"
        android:paddingTop="5dp"/>
    <TextView
        android:layout_width="230dp"
        android:layout_height="110dp"
        android:layout_below="@id/berita3"
        android:text="@string/berita4"
        android:paddingTop="12dp"
        android:clickable="true"
        android:textSize="20dp"
        android:id="@+id/berita4"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:src="@drawable/rapid"
        android:layout_below="@id/berita3"
        android:clickable="true"
        android:id="@+id/gambar4"
        android:layout_toRightOf="@id/berita4"
        android:paddingTop="5dp"/>

    <TextView
        android:layout_width="230dp"
        android:layout_height="110dp"
        android:layout_below="@id/berita4"
        android:text="@string/berita5"
        android:paddingTop="12dp"
        android:textSize="20dp"
        android:id="@+id/berita5"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:src="@drawable/kendalikan"
        android:clickable="true"
        android:id="@+id/gambar5"
        android:layout_below="@id/berita4"
        android:layout_toRightOf="@id/berita5"
        android:paddingTop="5dp"/>

</RelativeLayout>