<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Perawatan"
        android:textSize="30dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:id="@+id/tv_perawatan">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/perawatan"
        android:layout_below="@+id/tv_perawatan">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/perawatan1"
            android:paddingTop="20dp"
            android:text="@string/text_perawatan1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/perawatan2"
            android:paddingTop="12dp"
            android:layout_below="@+id/perawatan1"
            android:text="@string/text_perawatan2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/perawatan3"
            android:paddingTop="12dp"
            android:layout_below="@+id/perawatan2"
            android:text="@string/text_perawatan3"/>
    </RelativeLayout>
</RelativeLayout>