<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gejala"
        android:textSize="30dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:id="@+id/tv_gejala">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bagian_gejala"

        android:paddingTop="20dp"
        android:layout_below="@+id/tv_gejala">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/awal"
            android:text="@string/text_gejala1"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/awal"
            android:id="@+id/umum"
            android:textColor="#000000"
            android:paddingTop="12dp"
            android:text="@string/gejalaUmum"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/umum"
            android:textColor="#000000"
            android:id="@+id/demam"
            android:text="      - Demam"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/demam"
            android:textColor="#000000"
            android:id="@+id/batukKering"
            android:text="      - Batuk Kering"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:id="@+id/iv_batuk"
            android:textColor="#000000"
            android:layout_below="@+id/umum"
            android:layout_toRightOf="@id/batukKering"
            android:src="@drawable/batuk"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/batukKering"
            android:textColor="#000000"
            android:id="@+id/kelelahan"
            android:text="      - Kelelahan "/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:textColor="#000000"
            android:layout_below="@+id/iv_batuk"
            android:id="@+id/tv_gejala2"
            android:text="@string/gejalaSerius"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@+id/tv_gejala2"
            android:id="@+id/tv_sesakNafas"
            android:text="      - Kesulitan bernapas atau sesak napas."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sesakNafas"
            android:textColor="#000000"
            android:id="@+id/tv_nyeriDada"
            android:text="      - Nyeri dada atau rasa tertekan pada dada."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nyeriDada"
            android:textColor="#000000"
            android:id="@+id/tv_hilang"
            android:text="      - Hilangnya indra penciuman dan pengecap."/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:paddingTop="10dp"
            android:id="@+id/iv_sesak"
            android:layout_below="@+id/tv_hilang"
            android:src="@drawable/sesak"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:paddingTop="10dp"
            android:id="@+id/iv_nyeri"
            android:layout_below="@+id/tv_hilang"
            android:layout_toRightOf="@id/iv_sesak"
            android:src="@drawable/nyeri"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_gejala3"
            android:textColor="#000000"
            android:paddingTop="20dp"
            android:layout_below="@+id/iv_sesak"
            android:text="@string/text_gejala3"/>
    </RelativeLayout>
</RelativeLayout>
